# my_file_system

./: CMakeLists.txt  Makefile  config.status
src/: Makefile  command.txt  sfs  sfs.c  sfs.h  sfs_helper_functions.c  sfs_helper_functions.h
src/.deps/: sfs.Po
